tests/render_snapshots/snapshots/render_snapshots__connection_flow__connection_error_collapsed.snap
---
source: tests/render_snapshots/connection_flow.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│           ╭ Connection Error ────────────────────────────────────╮           │
│           │✗ Could not resolve host                              │           │
│           │                                                      │           │
│           │Hint: Check the hostname                              │───────────┘
│           │                                                      │───────────┐
│           │▶ Details (press d to expand)                         │           │
│           │                                                      │           │
│           │Actions:  e  Re-enter   s  Switch   d  Details   y  Co│           │
│           ╰ Esc to close ────────────────────────────────────────╯           │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
e:Edit  s:Switch  d:Details  y:Copy  Esc:Close
