tests/render_snapshots/snapshots/render_snapshots__connection_flow__connection_error_expanded_long_details_capped.snap
---
source: tests/render_snapshots/connection_flow.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│           ╭ Connection Error ────────────────────────────────────╮           │
│           │✗ Connection failed                                   │           │
│           │                                                      │           │
│           │Hint: See details for more information                │           │
│           │                                                      │           │
│           │▼ Details                                             │           │
│           │ERROR line 1: something went wrong in module_1        │───────────┘
│           │ERROR line 2: something went wrong in module_2        │───────────┐
│           │ERROR line 3: something went wrong in module_3        │           │
│           │ERROR line 4: something went wrong in module_4        │           │
│           │ERROR line 5: something went wrong in module_5        │           │
│           │                                                      │           │
│           │Actions:  e  Re-enter   s  Switch   d  Details   y  Co│           │
│           ╰ Scroll: ↑/↓/j/k  Esc to close ───────────────────────╯           │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
e:Edit  s:Switch  d:Details  y:Copy  Esc:Close
